--- a/Source/DotNet/pipeline.yml
+++ b/Source/DotNet/pipeline.yml
@@ -65,7 +65,7 @@ jobs:
     variables:
       - group: global-var-pipelines
       - name: NEW_VERSION
-        value: $[ dependencies.Cascading_Build.outputs['check_version.Version'] ]
+        value: $[ dependencies.DotNetCore_Build.outputs['set_version.Version'] ]
       - name: IsMerge
         value: $[ dependencies.Cascading_Build.outputs['check_version.IsMerge'] ]
 
@@ -100,7 +100,7 @@ jobs:
       - name: NEW_VERSION
         value: ${ dependencies.Cascading_Build.outputs['check_version.Version'] }
       - name: IsMerge
-        value: ${ dependencies.Cascading_Build.outputs['check_version.IsMerge'] }
+        value: ${ dependencies.DotNetCore_Build.outputs['set_version.IsMerge'] }
       
     steps:
       - bash: |
