--- a/Source/DotNet/pipeline.yml
+++ b/Source/DotNet/pipeline.yml
@@ -67,7 +67,7 @@ jobs:
       - name: NEW_VERSION
         value: $[ dependencies.DotNetCore_Build.outputs['set_version.Version'] ]
       - name: IsMerge
-        value: $[ dependencies.Cascading_Build.outputs['check_version.IsMerge'] ]
+        value: $[ dependencies.DotNetCore_Build.outputs['set_version.IsMerge'] ]
 
     steps:
       - template: ../Github/set_github_constants.yml
@@ -98,7 +98,7 @@ jobs:
     variables:
       - group: global-var-pipelines
       - name: NEW_VERSION
-        value: ${ dependencies.Cascading_Build.outputs['check_version.Version'] }
+        value: ${ dependencies.DotNetCore_Build.outputs['set_version.Version'] }
       - name: IsMerge
         value: ${ dependencies.DotNetCore_Build.outputs['set_version.IsMerge'] }
       
