--- a/Source/DotNet/pipeline.yml
+++ b/Source/DotNet/pipeline.yml
@@ -35,10 +35,10 @@ jobs:
     condition: and(succeeded(), ne(dependencies.DotNetCore_Build.outputs['set_version.Version'], 'empty'))
     variables:
       - group: global-var-pipelines
-      - name: NEW_VERSION
-        value: $[ dependencies.DotNetCore_Build.outputs['set_version.Version'] ]
-      - name: IsMerge
-        value: $[ dependencies.DotNetCore_Build.outputs['set_version.IsMerge'] ]
+#      - name: NEW_VERSION
+#        value: $[ dependencies.DotNetCore_Build.outputs['set_version.Version'] ]
+#      - name: IsMerge
+#        value: $[ dependencies.DotNetCore_Build.outputs['set_version.IsMerge'] ]
       
     steps:
       - bash: |
@@ -64,10 +64,10 @@ jobs:
     condition: succeeded()
     variables:
       - group: global-var-pipelines
-      - name: NEW_VERSION
-        value: $[ dependencies.DotNetCore_Build.outputs['set_version.Version'] ]
-      - name: IsMerge
-        value: $[ dependencies.DotNetCore_Build.outputs['set_version.IsMerge'] ]
+#      - name: NEW_VERSION
+#        value: $[ dependencies.DotNetCore_Build.outputs['set_version.Version'] ]
+#      - name: IsMerge
+#        value: $[ dependencies.DotNetCore_Build.outputs['set_version.IsMerge'] ]
 
     steps:
       - template: ../Github/set_github_constants.yml
