--- a/Source/DotNet/pipeline.yml
+++ b/Source/DotNet/pipeline.yml
@@ -44,9 +44,6 @@ jobs:
       - bash: |
           echo "Version : $(NEW_VERSION)"
           echo "Pr merged : $(IsMerge)"
-          echo "##vso[task.setvariable variable=Version;isOutput=true]$(NEW_VERSION)"
-          echo "##vso[task.setvariable variable=IsMerge;isOutput=true]$(IsMerge)"
-        name: check_version
 
       - checkout: none
 
@@ -64,10 +61,10 @@ jobs:
     condition: succeeded()
     variables:
       - group: global-var-pipelines
-#      - name: NEW_VERSION
-#        value: $[ dependencies.DotNetCore_Build.outputs['set_version.Version'] ]
-#      - name: IsMerge
-#        value: $[ dependencies.DotNetCore_Build.outputs['set_version.IsMerge'] ]
+      - name: NEW_VERSION
+        value: $[ dependencies.DotNetCore_Build.outputs['set_version.Version'] ]
+      - name: IsMerge
+        value: $[ dependencies.DotNetCore_Build.outputs['set_version.IsMerge'] ]
 
     steps:
       - template: ../Github/set_github_constants.yml
