--- a/Source/DotNet/pipeline.yml
+++ b/Source/DotNet/pipeline.yml
@@ -54,6 +54,13 @@ jobs:
       - template: "./cascading_build.yml"
         parameters:
           CASCADES: ${{ parameters.CASCADES }}
+          
+      - bash: |
+          echo "Version : $(NEW_VERSION)"
+          echo "Pr merged : $(IsMerge)"
+          echo "##vso[task.setvariable variable=Version;isOutput=true]$(NEW_VERSION)"
+          echo "##vso[task.setvariable variable=merged;isOutput=true]$(IsMerge)"
+        name: check_version
 
   - job: "Release"
     pool: ${{ parameters.pool }}
@@ -62,9 +69,9 @@ jobs:
     variables:
       - group: global-var-pipelines
       - name: NEW_VERSION
-        value: $[ dependencies.DotNetCore_Build.outputs['set_version.Version'] ]
+        value: $[ dependencies.DotNetCore_Build.outputs['check_version.Version'] ]
       - name: IsMerge
-        value: $[ dependencies.DotNetCore_Build.outputs['set_version.IsMerge'] ]
+        value: $[ dependencies.DotNetCore_Build.outputs['check_version.merged'] ]
 
     steps:
       - template: ../Github/set_github_constants.yml
@@ -95,9 +102,9 @@ jobs:
     variables:
       - group: global-var-pipelines
       - name: NEW_VERSION
-        value: $[ dependencies.DotNetCore_Build.outputs['set_version.Version'] ]
+        value: $[ dependencies.Cascading_Build.outputs['set_version.Version'] ]
       - name: IsMerge
-        value: $[ dependencies.DotNetCore_Build.outputs['set_version.IsMerge'] ]
+        value: $[ dependencies.Cascading_Build.outputs['set_version.IsMerge'] ]
       
     steps:
       - bash: |
