--- a/Source/DotNet/pipeline.yml
+++ b/Source/DotNet/pipeline.yml
@@ -93,7 +93,7 @@ jobs:
           
   - job: "Check_cross_job_variables"
     pool: ${{ parameters.pool }}
-    dependsOn: "Cascading_Build"
+#    dependsOn: "Cascading_Build"
     condition: always()
     variables:
       - group: global-var-pipelines
@@ -109,7 +109,7 @@ jobs:
 
   - job: "Cleanup"
     pool: ${{ parameters.pool }}
-    dependsOn: "Release"
+#    dependsOn: "Release"
     condition: always()
     steps:
       - checkout: none
@@ -125,7 +125,7 @@ jobs:
 
   - job: 'Documentation'
     pool: ${{ parameters.pool }}
-    dependsOn: "Cascading_Build"
+#    dependsOn: "Cascading_Build"
     condition: succeeded()
     variables:
     - group: global-var-pipelines
