--- a/Source/DotNet/pipeline.yml
+++ b/Source/DotNet/pipeline.yml
@@ -97,15 +97,15 @@ jobs:
     condition: always()
     variables:
       - group: global-var-pipelines
-      - name: VERSION
-        value: $[ dependencies.DotNetCore_Build.outputs['set_version.Version'] ]
-      - name: Merge
-        value: $[ dependencies.DotNetCore_Build.outputs['set_version.IsMerge'] ]
+#      - name: VERSION
+#        value: $[ dependencies.DotNetCore_Build.outputs['set_version.Version'] ]
+#      - name: Merge
+#        value: $[ dependencies.DotNetCore_Build.outputs['set_version.IsMerge'] ]
       
     steps:
       - bash: |
-          echo "Version : $(VERSION)"
-          echo "Pr merged : $(Merge)"
+          echo "Version : $(set_version.Version)"
+          echo "Pr merged : $(set_version.IsMerge)"
 
   - job: "Cleanup"
     pool: ${{ parameters.pool }}
