--- a/Source/DotNet/pipeline.yml
+++ b/Source/DotNet/pipeline.yml
@@ -97,10 +97,10 @@ jobs:
     condition: always()
     variables:
       - group: global-var-pipelines
-#      - name: VERSION
-#        value: $[ dependencies.DotNetCore_Build.outputs['set_version.Version'] ]
-#      - name: Merge
-#        value: $[ dependencies.DotNetCore_Build.outputs['set_version.IsMerge'] ]
+      - name: NEW_VERSION
+        value: $[ dependencies.DotNetCore_Build.outputs['set_version.Version'] ]
+      - name: IsMerge
+        value: $[ dependencies.DotNetCore_Build.outputs['set_version.IsMerge'] ]
       
     steps:
       - bash: |
