--- a/Source/DotNet/pipeline.yml
+++ b/Source/DotNet/pipeline.yml
@@ -35,6 +35,10 @@ jobs:
     condition: and(succeeded(), ne(dependencies.DotNetCore_Build.outputs['set_version.Version'], 'empty'))
     variables:
       - group: global-var-pipelines
+      - name: NEW_VERSION
+        value: $[ dependencies.DotNetCore_Build.outputs['set_version.Version'] ]
+      - name: IsMerge
+        value: $[ dependencies.DotNetCore_Build.outputs['set_version.IsMerge'] ]
       
     steps:
       - bash: |
