--- a/Source/DotNet/pipeline.yml
+++ b/Source/DotNet/pipeline.yml
@@ -62,38 +62,38 @@ jobs:
           echo "Pr merged : $(IsMerge)"
         name: check_version
 
-#  - job: "Release"
-#    pool: ${{ parameters.pool }}
-#    dependsOn: "Cascading_Build"
-#    condition: succeeded()
-#    variables:
-#      - group: global-var-pipelines
-#      - name: NEW_VERSION
-#        value: $[ dependencies.Cascading_Build.outputs['set_version.Version'] ]
-#      - name: IsMerge
-#        value: $[ dependencies.Cascading_Build.outputs['set_version.IsMerge'] ]
+  - job: "Release"
+    pool: ${{ parameters.pool }}
+    dependsOn: "Cascading_Build" | "DotNetCore_Build"
+    condition: succeeded()
+    variables:
+      - group: global-var-pipelines
+      - name: NEW_VERSION
+        value: $[ dependencies.Cascading_Build.outputs['set_version.Version'] ]
+      - name: IsMerge
+        value: $[ dependencies.Cascading_Build.outputs['set_version.IsMerge'] ]
 
-#    steps:
-#      - template: ../Github/set_github_constants.yml#
+    steps:
+      - template: ../Github/set_github_constants.yml#
 
-#      - task: NuGetCommand@2
-#        displayName: Push Nuget packs
-#        condition: eq(variables['IsMerge'], 'true')
-#        inputs:
-#          command: push
-#          nugetFeedType: "external"
-#          packagesToPush: "/root/.nuget/dolittle-packages/**/*.nupkg"
-#          publishFeedCredentials: "myget_mathieu"
+      - task: NuGetCommand@2
+        displayName: Push Nuget packs
+        condition: eq(variables['IsMerge'], 'true')
+        inputs:
+          command: push
+          nugetFeedType: "external"
+          packagesToPush: "/root/.nuget/dolittle-packages/**/*.nupkg"
+          publishFeedCredentials: "myget_mathieu"
 
-#      - template: ../Versioning/commit_version_tag.yml
-#        parameters:
-#          NEW_VERSION: $(NEW_VERSION)
-#          REPO: $(github_constants.Repo)
-#          BRANCH: $(github_constants.Branch)
+      - template: ../Versioning/commit_version_tag.yml
+        parameters:
+          NEW_VERSION: $(NEW_VERSION)
+          REPO: $(github_constants.Repo)
+          BRANCH: $(github_constants.Branch)
 
-#      - template: ./tag_cascades.yml
-#        parameters:
-#          CASCADES: ${{ parameters.CASCADES }}
+      - template: ./tag_cascades.yml
+        parameters:
+          CASCADES: ${{ parameters.CASCADES }}
           
   - job: "Check_cross_job_variables"
     pool: ${{ parameters.pool }}
