--- a/Source/DotNet/pipeline.yml
+++ b/Source/DotNet/pipeline.yml
@@ -56,8 +56,6 @@ jobs:
           CASCADES: ${{ parameters.CASCADES }}
           
       - bash: |          
-          echo "##vso[task.setvariable variable=Version;isOutput=true]$(Version)"
-          echo "##vso[task.setvariable variable=merged;isOutput=true]$(IsMerge)"
           echo "Version : $(Version)"
           echo "Pr merged : $(IsMerge)"
         name: check_version
@@ -74,6 +72,11 @@ jobs:
         value: $[ dependencies.Cascading_Build.outputs['set_version.IsMerge'] ]
 
     steps:
+    
+      - bash: |
+          echo "Version : $(NEW_VERSION)"
+          echo "Pr merged : $(IsMerge)"
+        
       - template: ../Github/set_github_constants.yml
 
       - task: NuGetCommand@2
