--- a/Source/DotNet/pipeline.yml
+++ b/Source/DotNet/pipeline.yml
@@ -119,7 +119,7 @@ jobs:
 
   - job: "Cleanup"
     pool: ${{ parameters.pool }}
-    dependsOn: [ "Cascading_Build", "Release" ]
+    dependsOn: [ "Cascading_Build", "Release", "Documentation" ]
     condition: always()
     steps:
       - checkout: none
@@ -132,15 +132,18 @@ jobs:
 
       - script: ls /root/.nuget/dolittle-packages
         displayName: Packages after clean
+        
+      - script: rm -rf $(Agent.BuildDirectory)/*
+        displayName: Clean $(Agent.BuildDirectory)
 
-#  - job: 'Documentation'
-#    pool: ${{ parameters.pool }}
-#    dependsOn: "Cascading_Build"
-#    condition: succeeded()
-#    variables:
-#    - group: global-var-pipelines
-#    steps:
-#    - template: ../Documentation/documentation.yml
+  - job: 'Documentation'
+    pool: ${{ parameters.pool }}
+    dependsOn: "Release"
+    condition: succeeded()
+    variables:
+    - group: global-var-pipelines
+    steps:
+    - template: ../Documentation/documentation.yml
 
 # echo PullRequest  49e27cc18f57870206171925a8c540abdac7bbfb 2.0.0
 # echo IndividualCI 036100265b6d83d536827451131bf8c306ce9d43 2.0.0
