--- a/Source/Versioning/set_version_variable.yml
+++ b/Source/Versioning/set_version_variable.yml
@@ -80,16 +80,21 @@ steps:
                 MAJOR=$((MAJOR+1))
                 MINOR="0"
                 PATCH="0"
+                echo "##vso[task.setvariable variable=IsMajor;isOutput=true]true"
 
             elif [ "$MINOR_LABEL" = "minor" ] && [ "$NEW_PROJECT" = false ]
             then
                 echo "New minor release"
                 MINOR=$((MINOR+1))
                 PATCH="0"
+                echo "##vso[task.setvariable variable=IsMajor;isOutput=true]false"
+
             elif [ "$PATCH_LABEL" = "patch" ] && [ "$NEW_PROJECT" = false ]
             then
                 echo "New patch release"
                 PATCH=$((PATCH+1))
+                echo "##vso[task.setvariable variable=IsMajor;isOutput=true]false"
+
             elif [ "$COMMIT_MESSAGE" = "$CASCADING_BUILD_MESSAGE" ] && [ "$NEW_PROJECT" = false ]
             then
                 echo "New patch release, dependency has been upgraded."
@@ -101,6 +106,7 @@ steps:
             echo New version "$NEW_VERSION"
         else
             echoerr No label triggering new version
+            echo "##vso[task.setvariable variable=IsMajor;isOutput=true]false"
             echo "##vso[task.setvariable variable=Version;isOutput=true]empty"
         fi
         
