If you thought Python was strange, try YAML

--- a/Source/Contracts/pipeline.yml
+++ b/Source/Contracts/pipeline.yml
@@ -30,8 +30,8 @@ jobs:
       - template: "./python.yml"
         parameters:
           packageName: ${{ parameters.pipPackageName }}
-          version: $(variables.version)
-          release: $(variables.release)
+          version: $(version)
+          release: $(release)
 
   - job: "TagRepository"
     dependsOn: "Initialize"
