--- a/Source/Contracts/python.yml
+++ b/Source/Contracts/python.yml
@@ -6,6 +6,14 @@ parameters:
   release: false
 
 steps:
+  - bash: |
+      echo "Source : ${{ parameters.sourceFolder }}"
+      echo "PackageName : ${{ parameters.packageName }}"
+      echo "ReadMeFile : ${{ parameters.readMeFile }}"
+      echo "Version : ${{ parameters.version }}"
+      echo "Release : ${{ parameters.release }}"
+    displayName: Show Parameters
+
   - bash: git clone https://github.com/dolittle-tools/Contracts.Build.git
     displayName: Clone Contracts Build
 
