--- a/Source/Contracts/pipeline.yml
+++ b/Source/Contracts/pipeline.yml
@@ -21,7 +21,7 @@ jobs:
     variables:
       - group: python
       - group: global-var-pipelines
-      - name: VERSION
+      - name: NEW_VERSION
         value: $[ dependencies.Initialize.outputs['set_version.Version'] ]
       - name: IsMerge
         value: $[ dependencies.Initialize.outputs['set_version.IsMerge'] ]
@@ -37,12 +37,14 @@ jobs:
     dependsOn: "Initialize"
     variables:
       - group: global-var-pipelines
-      - name: VERSION
+      - name: NEW_VERSION
         value: $[ dependencies.Initialize.outputs['set_version.Version'] ]
       - name: IsMerge
         value: $[ dependencies.Initialize.outputs['set_version.IsMerge'] ]
 
     steps:
+      - template: ../Github/set_github_constants.yml
+
       - template: ../Versioning/commit_version_tag.yml
         
         parameters:
