--- a/Source/Contracts/python.yml
+++ b/Source/Contracts/python.yml
@@ -11,8 +11,11 @@ steps:
       echo "PackageName : ${{ parameters.packageName }}"
       echo "ReadMeFile : ${{ parameters.readMeFile }}"
       echo "Version : ${{ parameters.NEW_VERSION }}"
-      echo "Release : ${{ parameters.IsMerge }}"
+      echo "Release : ${{ parameters.release }}"
     displayName: Show Parameters
+
+  - bash: git clone https://github.com/dolittle-tools/Contracts.Build.git
+    displayName: Clone Contracts Build
 
   - bash: python3 -m pip install --user --upgrade setuptools wheel
     displayName: Install Setup Tools  
