Depend on both language specific jobs

--- a/Source/Contracts/pipeline.yml
+++ b/Source/Contracts/pipeline.yml
@@ -54,7 +54,7 @@ jobs:
           IsMerge: $(IsMerge)
 
   - job: "TagRepository"
-    dependsOn: "Initialize"
+    dependsOn: ["Python", "CSharp"]
     variables:
       - group: global-var-pipelines
       - name: NEW_VERSION
