--- a/Source/Contracts/csharp.yml
+++ b/Source/Contracts/csharp.yml
@@ -12,7 +12,7 @@ steps:
       echo "Release : ${{ parameters.IsMerge }}"
     displayName: Show Parameters
 
-  - bash: git clone https://github.com/dolittle-tools/Contracts.Build.git
+  - bash: git clone --recursive https://github.com/dolittle-tools/Contracts.Build.git
     displayName: Clone Contracts Build
 
   - bash: mkdir -p $(System.DefaultWorkingDirectory)/Generation/CSharp/
