--- a/Source/Versioning/set_version_variable.yml
+++ b/Source/Versioning/set_version_variable.yml
@@ -23,9 +23,9 @@ steps:
             sleep 1
         done
 
-        local VERSION=$(echo "$TAG_REFS" | grep -o -E "refs/tags/\S+" | awk -F "tags/" '{print $2}' | grep -o -e "^[0-9]\+\.[0-9]\+\.[0-9]\+$" | head -1)
+        # local VERSION=$(echo "$TAG_REFS" | grep -o -E "refs/tags/\S+" | awk -F "tags/" '{print $2}' | grep -o -e "^[0-9]\+\.[0-9]\+\.[0-9]\+$" | head -1)
         # The one after is for handling with pre-release versions"   
-        #        local VERSION=$(echo "$TAG_REFS" | grep -o -E "refs/tags/\S+" | awk -F "tags/" '{print $2}' | grep -o -e "^[0-9]\+\.[0-9]\+\.[0-9]\+\-\?.\?*\+[0-9]\?*\+$" | head -1)
+        local VERSION=$(echo "$TAG_REFS" | grep -o -E "refs/tags/\S+" | awk -F "tags/" '{print $2}' | grep -o -e "^[0-9]\+\.[0-9]\+\.[0-9]\+\-\?.\?*\+[0-9]\?*\+$" | head -1)
         echo "$VERSION"
     }
 
@@ -62,30 +62,8 @@ steps:
             PREVIEW_LABEL=$(echo "$LABELS" | grep -E '^preview$')
         fi
 
-        #   if [ "$VERSION" =~ ^[0-9]\+\.[0-9]\+\.[0-9]\+$ ]
-        #   then
-        #       ~ Basic verioning with major, minor and patch
-        #
-        #   elif [ "$VERSION" =~ ^[0-9]\+\.[0-9]\+\.[0-9]\+\-?.\+\.[0-9]\+$ ]
-        #   then
-        #       ~ Pre-release versioning with incrementing preview number
-        #       - preview_number=`echo $VERSION | awk -F "." '{print $4}'`
-        #       - preview_number=$((preview_number+1))
-        #       - preview_version=`echo $VERSION | awk -F "-" '{print $2}'` | awk -F "." '{print $1}'`
-        #       MAJOR=`echo $VERSION | awk -F "." '{print $1}'`
-        #       MINOR=`echo $VERSION | awk -F "." '{print $2}'`
-        #       PATCH=`echo $VERSION | awk -F "." '{print $3}'`
-        #       NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}-${preview_version}.${preview_number}"
-        #   elif [ "$VERSION" =~ ^[0-9]\+\.[0-9]\+\.[0-9]\+\-?[a-zA-Z0-9]\+$ ]
-        #       ~ Pre-release versioning with Adding a preview number
-        #       - preview_number="1"
-        #       - preview_version=`echo $VERSION | awk -F "-" '{print $2}'`
-        #       MAJOR=`echo $VERSION | awk -F "." '{print $1}'`
-        #       MINOR=`echo $VERSION | awk -F "." '{print $2}'`
-        #       PATCH=`echo $VERSION | awk -F "." '{print $3}'`
-        #       NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}-${preview_version}.${preview_number}"
 
-        if [ "$MAJOR_LABEL" = "major" ] || [ "$MINOR_LABEL" = "minor" ] || [ "$PATCH_LABEL" = "patch" ]
+        if [ "$MAJOR_LABEL" = "major" ] || [ "$MINOR_LABEL" = "minor" ] || [ "$PATCH_LABEL" = "patch" ] || [ "$PREVIEW_LABEL" = "preview" ] || [ "$COMMIT_MESSAGE" = "$CASCADING_BUILD_MESSAGE" ]
         then
             echo "Getting version tag..."
             
@@ -97,40 +75,84 @@ steps:
                 VERSION=1.0.0
                 echo No version tag found. Setting version to "$VERSION"
             fi
-            MAJOR=`echo $VERSION | awk -F "." '{print $1}'`
-            MINOR=`echo $VERSION | awk -F "." '{print $2}'`
-            PATCH=`echo $VERSION | awk -F "." '{print $3}'`
-            
-            if [ "$MAJOR_LABEL" = "major" ] && [ "$NEW_PROJECT" = false ]
+            if [ "$VERSION" =~ ^[0-9]\+\.[0-9]\+\.[0-9]\+$ ]
             then
-                echo "New major release"
-                MAJOR=$((MAJOR+1))
-                MINOR="0"
-                PATCH="0"
-                echo "##vso[task.setvariable variable=IsMajor;isOutput=true]true"
+            #    ~ Basic verioning with major, minor and patch
+                MAJOR=`echo $VERSION | awk -F "." '{print $1}'`
+                MINOR=`echo $VERSION | awk -F "." '{print $2}'`
+                PATCH=`echo $VERSION | awk -F "." '{print $3}'`
+                
+                if [ "$MAJOR_LABEL" = "major" ] && [ "$NEW_PROJECT" = false ]
+                then
+                    echo "New major release"
+                    MAJOR=$((MAJOR+1))
+                    MINOR="0"
+                    PATCH="0"
+                    echo "##vso[task.setvariable variable=IsMajor;isOutput=true]true"
 
-            elif [ "$MINOR_LABEL" = "minor" ] && [ "$NEW_PROJECT" = false ] && [ "$MAJOR_LABEL" != "major" ]
-            then
-                echo "New minor release"
-                MINOR=$((MINOR+1))
-                PATCH="0"
-                echo "##vso[task.setvariable variable=IsMajor;isOutput=true]false"
+                elif [ "$MINOR_LABEL" = "minor" ] && [ "$NEW_PROJECT" = false ] && [ "$MAJOR_LABEL" != "major" ]
+                then
+                    echo "New minor release"
+                    MINOR=$((MINOR+1))
+                    PATCH="0"
+                    echo "##vso[task.setvariable variable=IsMajor;isOutput=true]false"
 
-            elif [ "$PATCH_LABEL" = "patch" ] && [ "$NEW_PROJECT" = false ] && [ "$MINOR_LABEL" != "minor" ] && [ "$MAJOR_LABEL" != "major" ]
-            then
-                echo "New patch release"
-                PATCH=$((PATCH+1))
-                echo "##vso[task.setvariable variable=IsMajor;isOutput=true]false"
+                elif [ "$PATCH_LABEL" = "patch" ] && [ "$NEW_PROJECT" = false ] && [ "$MINOR_LABEL" != "minor" ] && [ "$MAJOR_LABEL" != "major" ]
+                then
+                    echo "New patch release"
+                    PATCH=$((PATCH+1))
+                    echo "##vso[task.setvariable variable=IsMajor;isOutput=true]false"
 
-            elif [ "$COMMIT_MESSAGE" = "$CASCADING_BUILD_MESSAGE" ] && [ "$NEW_PROJECT" = false ]
+                
+                elif [ "$COMMIT_MESSAGE" = "$CASCADING_BUILD_MESSAGE" ] && [ "$NEW_PROJECT" = false ]
+                then
+                    echo "New patch release, dependency has been upgraded."
+                    PATCH=$((PATCH+1))
+                fi
+
+                if  [ "$PREVIEW_LABEL" = "preview" ] && [ "$PATCH_LABEL" != "patch" ] && [ "$MINOR_LABEL" != "minor" ] && [ "$MAJOR_LABEL" != "major" ]
+                then
+                    echo "Label is [preview] but version tag is not a pre release. Please use [patch] [minor] or [major] label."
+                    echo "##vso[task.setvariable variable=Version;isOutput=true]empty"
+                else
+                    NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}"
+                    echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
+                    echo Previous version "$VERSION"
+                    echo New version "$NEW_VERSION"
+                fi
+
+            elif [ "$VERSION" =~ ^[0-9]\+\.[0-9]\+\.[0-9]\+\-?.\+\.[0-9]\+$ ] && [ "$PREVIEW_LABEL" = "preview" ] && [ "$MAJOR_LABEL" != "major" ]
             then
-                echo "New patch release, dependency has been upgraded."
-                PATCH=$((PATCH+1))
+                echo "Pre-release versioning... incrementing preview number"
+                preview_number=`echo $VERSION | awk -F "." '{print $4}'`
+                preview_number=$((preview_number+1))
+                preview_version=`echo $VERSION | awk -F "-" '{print $2}'` | awk -F "." '{print $1}'`
+                MAJOR=`echo $VERSION | awk -F "." '{print $1}'`
+                MINOR=`echo $VERSION | awk -F "." '{print $2}'`
+                PATCH=`echo $VERSION | awk -F "." '{print $3}'`
+                NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}-${preview_version}.${preview_number}"
+                echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
+
+            elif [ "$VERSION" =~ ^[0-9]\+\.[0-9]\+\.[0-9]\+\-?[a-zA-Z0-9]\+$ ] && [ "$PREVIEW_LABEL" = "preview" ] && [ "$MAJOR_LABEL" != "major" ]
+            then
+                echo "Pre-release versioning, no preview number found... Adding a preview number = 1"
+                - preview_number="1"
+                - preview_version=`echo $VERSION | awk -F "-" '{print $2}'`
+                MAJOR=`echo $VERSION | awk -F "." '{print $1}'`
+                MINOR=`echo $VERSION | awk -F "." '{print $2}'`
+                PATCH=`echo $VERSION | awk -F "." '{print $3}'`
+                NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}-${preview_version}.${preview_number}"
+                echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
+            elif [ "$VERSION" =~ ^[0-9]\+\.[0-9]\+\.[0-9]\+\-?.\+\.[0-9]\+$ ] || [ "$VERSION" =~ ^[0-9]\+\.[0-9]\+\.[0-9]\+\-?[a-zA-Z0-9]\+$ ] && [ "$MAJOR_LABEL" = "major" ]
+            then
+                NEW_VERSION=1.0.0
+                echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
+                echo "Major update from pre-release --> Version is no longer a pre-release. Now 1.0.0"
+            else
+                echoerr "INVALID VERSION $(VERSION)! Please use SymVer syntax for version tags, or let it empty."
+                echo "##vso[task.setvariable variable=Version;isOutput=true]empty"
             fi
-            NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}"
-            echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
-            echo Previous version "$VERSION"
-            echo New version "$NEW_VERSION"
+
         else
             echoerr No label triggering new version
             echo "##vso[task.setvariable variable=IsMajor;isOutput=true]false"
