--- a/Source/Versioning/set_version_variable.yml
+++ b/Source/Versioning/set_version_variable.yml
@@ -68,6 +68,7 @@ steps:
             echo "Getting version tag..."
             
             VERSION=$(get_latest_version_tag)
+            echo "Version is : $(VERSION)
             NEW_PROJECT=false
             if [ ! "$VERSION" ]
             then
