--- a/Source/Versioning/set_version_variable.yml
+++ b/Source/Versioning/set_version_variable.yml
@@ -23,8 +23,15 @@ steps:
             sleep 1
         done
 
-        # local VERSION=$(echo "$TAG_REFS" | grep -o -E "refs/tags/\S+" | awk -F "tags/" '{print $2}' | grep -o -e "^[0-9]\+\.[0-9]\+\.[0-9]\+$" | head -1)
-        # The one after is for handling with pre-release versions"   
+        local VERSION=$(echo "$TAG_REFS" | grep -o -E "refs/tags/\S+" | awk -F "tags/" '{print $2}' | grep -o -e "^[0-9]\+\.[0-9]\+\.[0-9]\+$" | head -1)
+    }
+    get_preview_version_tag () {
+        local TAG_REFS=$(git -c 'versionsort.suffix=-' ls-remote --refs --sort=-v:refname)
+        while [ ! "$TAG_REFS" ]
+        do
+            sleep 1
+        done
+
         local VERSION=$(echo "$TAG_REFS" | grep -o -E "refs/tags/\S+" | awk -F "tags/" '{print $2}' | grep -o -e "^[0-9]\+\.[0-9]\+\.[0-9]\+\-\?.\?*\+[0-9]\?*\+$" | head -1)
         echo "$VERSION"
     }
@@ -63,12 +70,57 @@ steps:
         fi
 
 
-        if [ "$MAJOR_LABEL" = "major" ] || [ "$MINOR_LABEL" = "minor" ] || [ "$PATCH_LABEL" = "patch" ] || [ "$PREVIEW_LABEL" = "preview" ] || [ "$COMMIT_MESSAGE" = "$CASCADING_BUILD_MESSAGE" ]
+        if [ "$PREVIEW_LABEL" = "preview" ]
+        then
+            VERSION=$(get_preview_version_tag)
+            if [ -z "$VERSION"]
+            then
+                VERSION=$(get_latest_version_tag)
+                if [ "$VERSION" != "" ]
+                then
+                    NEW_VERSION="${$VERSION}-preview.1"
+                    echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
+                    echo "Preview tag created from last version."
+                fi
+            else
+                if [ "$VERSION" =~ ^[0-9]\+\.[0-9]\+\.[0-9]\+\-?.\+\.[0-9]\+$ ] && [ "$MAJOR_LABEL" != "major" ]
+                then
+                    echo "Pre-release versioning... incrementing preview number"
+                    preview_number=`echo $VERSION | awk -F "." '{print $4}'`
+                    preview_number=$((preview_number+1))
+                    preview_version=`echo $VERSION | awk -F "-" '{print $2}' | awk -F "." '{print $1}'`
+                    MAJOR=`echo $VERSION | awk -F "." '{print $1}'`
+                    MINOR=`echo $VERSION | awk -F "." '{print $2}'`
+                    PATCH=`echo $VERSION | awk -F "." '{print $3}'`
+                    NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}-${preview_version}.${preview_number}"
+                    echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
+
+                elif [ "$VERSION" =~ ^[0-9]\+\.[0-9]\+\.[0-9]\+\-?[a-zA-Z0-9]\+$ ] && [ "$MAJOR_LABEL" != "major" ]
+                then
+                    echo "Pre-release versioning, no preview number found... Adding a preview number = 1"
+                    - preview_number="1"
+                    - preview_version=`echo $VERSION | awk -F "-" '{print $2}'`
+                    MAJOR=`echo $VERSION | awk -F "." '{print $1}'`
+                    MINOR=`echo $VERSION | awk -F "." '{print $2}'`
+                    PATCH=`echo $VERSION | awk -F "." '{print $3}'`
+                    NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}-${preview_version}.${preview_number}"
+                    echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
+                elif [ "$VERSION" =~ ^[0-9]\+\.[0-9]\+\.[0-9]\+\-?.\+\.[0-9]\+$ ] || [ "$VERSION" =~ ^[0-9]\+\.[0-9]\+\.[0-9]\+\-?[a-zA-Z0-9]\+$ ] && [ "$MAJOR_LABEL" = "major" ]
+                then
+                    NEW_VERSION=`echo $VERSION | awk -F "-" '{print $1}'`
+                    echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
+                    echo "Major update from pre-release --> Version is no longer a pre-release."
+                else
+                    echoerr "Error with pre-release versioning"
+                fi
+            fi
+        
+        elif [ "$MAJOR_LABEL" = "major" ] || [ "$MINOR_LABEL" = "minor" ] || [ "$PATCH_LABEL" = "patch" ] || [ "$COMMIT_MESSAGE" = "$CASCADING_BUILD_MESSAGE" ]
         then
             echo "Getting version tag..."
             
-            VERSION=$(get_latest_version_tag)
-            echo "Version is : $VERSION"
+            VERSION=$(get_latest_version_tag)"
+            echo "Version is = $VERSION"
             NEW_PROJECT=false
             if [ ! "$VERSION" ]
             then
@@ -78,7 +130,6 @@ steps:
             fi
             if [ "$VERSION" =~ ^[0-9]\+\.[0-9]\+\.[0-9]\+$ ]
             then
-            #    ~ Basic verioning with major, minor and patch
                 MAJOR=`echo $VERSION | awk -F "." '{print $1}'`
                 MINOR=`echo $VERSION | awk -F "." '{print $2}'`
                 PATCH=`echo $VERSION | awk -F "." '{print $3}'`
@@ -114,41 +165,14 @@ steps:
                 if  [ "$PREVIEW_LABEL" = "preview" ] && [ "$PATCH_LABEL" != "patch" ] && [ "$MINOR_LABEL" != "minor" ] && [ "$MAJOR_LABEL" != "major" ]
                 then
                     echo "Label is [preview] but version tag is not a pre release. Please use [patch] [minor] or [major] label."
-                    echo "##vso[task.setvariable variable=Version;isOutput=true]empty"
-                else
-                    NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}"
-                    echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
-                    echo Previous version "$VERSION"
-                    echo New version "$NEW_VERSION"
+                    echo "##vso[task.setvariable variable=Version;isOutput=true]empty" 
                 fi
+                NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}"
+                echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
+                echo Previous version "$VERSION"
+                echo New version "$NEW_VERSION"
 
-            elif [ "$VERSION" =~ ^[0-9]\+\.[0-9]\+\.[0-9]\+\-?.\+\.[0-9]\+$ ] && [ "$PREVIEW_LABEL" = "preview" ] && [ "$MAJOR_LABEL" != "major" ]
-            then
-                echo "Pre-release versioning... incrementing preview number"
-                preview_number=`echo $VERSION | awk -F "." '{print $4}'`
-                preview_number=$((preview_number+1))
-                preview_version=`echo $VERSION | awk -F "-" '{print $2}' | awk -F "." '{print $1}'`
-                MAJOR=`echo $VERSION | awk -F "." '{print $1}'`
-                MINOR=`echo $VERSION | awk -F "." '{print $2}'`
-                PATCH=`echo $VERSION | awk -F "." '{print $3}'`
-                NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}-${preview_version}.${preview_number}"
-                echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
-
-            elif [ "$VERSION" =~ ^[0-9]\+\.[0-9]\+\.[0-9]\+\-?[a-zA-Z0-9]\+$ ] && [ "$PREVIEW_LABEL" = "preview" ] && [ "$MAJOR_LABEL" != "major" ]
-            then
-                echo "Pre-release versioning, no preview number found... Adding a preview number = 1"
-                - preview_number="1"
-                - preview_version=`echo $VERSION | awk -F "-" '{print $2}'`
-                MAJOR=`echo $VERSION | awk -F "." '{print $1}'`
-                MINOR=`echo $VERSION | awk -F "." '{print $2}'`
-                PATCH=`echo $VERSION | awk -F "." '{print $3}'`
-                NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}-${preview_version}.${preview_number}"
-                echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
-            elif [ "$VERSION" =~ ^[0-9]\+\.[0-9]\+\.[0-9]\+\-?.\+\.[0-9]\+$ ] || [ "$VERSION" =~ ^[0-9]\+\.[0-9]\+\.[0-9]\+\-?[a-zA-Z0-9]\+$ ] && [ "$MAJOR_LABEL" = "major" ]
-            then
-                NEW_VERSION=1.0.0
-                echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
-                echo "Major update from pre-release --> Version is no longer a pre-release. Now 1.0.0"
+            
             else
                 echoerr "INVALID VERSION $VERSION ! Please use SymVer syntax for version tags, or let it empty."
                 echo "##vso[task.setvariable variable=Version;isOutput=true]empty"
