--- a/Source/Versioning/set_version_variable.yml
+++ b/Source/Versioning/set_version_variable.yml
@@ -83,7 +83,7 @@ steps:
                     echo "Preview tag created from last version."
                 fi
             else
-                if [ "$VERSION" =~ ^[0-9]\+\.[0-9]\+\.[0-9]\+\-?.\+\.[0-9]\+$ ] && [ "$MAJOR_LABEL" != "major" ]
+                if [ $VERSION =~ ^[0-9]\+\.[0-9]\+\.[0-9]\+\-?.\+\.[0-9]\+$ ] && [ "$MAJOR_LABEL" != "major" ]
                 then
                     echo "Pre-release versioning... incrementing preview number"
                     preview_number=`echo $VERSION | awk -F "." '{print $4}'`
@@ -95,7 +95,7 @@ steps:
                     NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}-${preview_version}.${preview_number}"
                     echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
 
-                elif [ "$VERSION" =~ ^[0-9]\+\.[0-9]\+\.[0-9]\+\-?[a-zA-Z0-9]\+$ ] && [ "$MAJOR_LABEL" != "major" ]
+                elif [ $VERSION =~ ^[0-9]\+\.[0-9]\+\.[0-9]\+\-?[a-zA-Z0-9]\+$ ] && [ "$MAJOR_LABEL" != "major" ]
                 then
                     echo "Pre-release versioning, no preview number found... Adding a preview number = 1"
                     - preview_number="1"
@@ -105,7 +105,7 @@ steps:
                     PATCH=`echo $VERSION | awk -F "." '{print $3}'`
                     NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}-${preview_version}.${preview_number}"
                     echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
-                elif [ "$VERSION" =~ ^[0-9]\+\.[0-9]\+\.[0-9]\+\-?.\+\.[0-9]\+$ ] || [ "$VERSION" =~ ^[0-9]\+\.[0-9]\+\.[0-9]\+\-?[a-zA-Z0-9]\+$ ] && [ "$MAJOR_LABEL" = "major" ]
+                elif [ $VERSION =~ ^[0-9]\+\.[0-9]\+\.[0-9]\+\-?.\+\.[0-9]\+$ ] || [ "$VERSION" =~ ^[0-9]\+\.[0-9]\+\.[0-9]\+\-?[a-zA-Z0-9]\+$ ] && [ "$MAJOR_LABEL" = "major" ]
                 then
                     NEW_VERSION=`echo $VERSION | awk -F "-" '{print $1}'`
                     echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
@@ -122,7 +122,7 @@ steps:
             VERSION=$(get_latest_version_tag)
             echo "Version is = $VERSION"
             NEW_PROJECT=false
-            if [ "$VERSION" =~ ^[0-9]\+\.[0-9]\+\.[0-9]\+$ ]
+            if [ $VERSION =~ ^[0-9]\+\.[0-9]\+\.[0-9]\+$ ]
             then
                 if [ ! "$VERSION" ]
                 then
